# qopycat

./: README.md  pyproject.toml  qopycat.pyproject
src/: __main__.py  test.py
