[tool.poetry]
name = "qopycat"
version = "0.1.0"
description = ""
authors = ["Bahanurenis <bahanurenis@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
  {include = "*", from="src"}
]

[tool.poetry.scripts]
copycat = 'main:main'

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
